muum games added

--- a/content/projects/muum-codes.mdx
+++ b/content/projects/muum-codes.mdx
@@ -5,7 +5,15 @@ date: "2024-08-01"
 url: https://muum.codes
 repository: muratumutlu/muum-codes
 published: true
-opensource: false
+opensource: true
+categories:
+  - Web
+techStack:
+  - Next.js
+  - Mantine UI
+  - React Query
+  - Redux
+  - Vercel
 ---
 
 TODO
