techStack info added

--- a/content/projects/notion-web-clone.mdx
+++ b/content/projects/notion-web-clone.mdx
@@ -9,6 +9,12 @@ opensource: true
 categories:
   - Clone
   - Web
+techStack:
+  - React
+  - TypeScript
+  - Tailwind CSS
+  - NextAuth
+  - Convex
 ---
 
 TODO
