--- a/content/projects/react-performance-checklist.mdx
+++ b/content/projects/react-performance-checklist.mdx
@@ -9,6 +9,13 @@ opensource: true
 categories:
   - Tool
   - Web
+techStack:
+  - React
+  - TypeScript
+  - Next.js
+  - Mantine UI
+  - Firestore
+  - NextAuth
 ---
 
 TODO
