--- a/content/projects/real-time-admin-dashboard.mdx
+++ b/content/projects/real-time-admin-dashboard.mdx
@@ -9,6 +9,12 @@ opensource: true
 categories:
   - Dashboard
   - Web
+techStack:
+  - React
+  - Refine
+  - TypeScript
+  - Mantine UI
+  - GraphQL
 ---
 
 TODO
