--- a/content/projects/real-time-notification-system.mdx
+++ b/content/projects/real-time-notification-system.mdx
@@ -9,6 +9,21 @@ opensource: true
 categories:
   - Tool
   - Web
+techStack:
+  - TypeScript
+  - React
+  - Next.js
+  - Mantine UI
+  - GraphQL
+  - Apollo Client
+  - PostgreSQL
+  - Redis
+  - WebSockets
+  - Helm
+  - GitHub Actions
+  - Nginx
+  - Let's Encrypt
+  - Vercel
 ---
 
 TODO
