--- a/content/projects/rest-api-ai-saas.mdx
+++ b/content/projects/rest-api-ai-saas.mdx
@@ -10,6 +10,12 @@ categories:
   - AI
   - SaaS
   - Web
+techStack:
+  - TypeScript
+  - NestJS
+  - Node.js
+  - PostgreSQL
+  - PrismaDB
 ---
 
 TODO
