--- a/content/projects/saas-ai-platform.mdx
+++ b/content/projects/saas-ai-platform.mdx
@@ -10,6 +10,15 @@ categories:
   - AI
   - SaaS
   - Web
+techStack:
+  - TypeScript
+  - React
+  - Next.js
+  - Node.js
+  - PostgreSQL
+  - PrismaDB
+  - Tailwind CSS
+  - Stripe
 ---
 
 TODO
