--- a/content/projects/saas-automation-builder.mdx
+++ b/content/projects/saas-automation-builder.mdx
@@ -6,6 +6,16 @@ description: "This is the SaaS Automation Builder project."
 repository: muumdev/web-analytics
 published: true
 opensource: true
+categories:
+  - SaaS
+  - Web
+techStack:
+  - TypeScript
+  - React
+  - Next.js
+  - Clerk
+  - Stripe
+  - Bun
 ---
 
 TODO
