--- a/content/projects/saas-website-builder.mdx
+++ b/content/projects/saas-website-builder.mdx
@@ -6,6 +6,18 @@ description: "This is the SaaS Website Builder project."
 repository: muumdev/web-analytics
 published: true
 opensource: true
+categories:
+  - SaaS
+  - Web
+techStack:
+  - TypeScript
+  - React
+  - Next.js
+  - Stripe
+  - PrismaDB
+  - MySQL
+  - Bun
+
 ---
 
 TODO
