--- a/content/projects/spotify-web-clone.mdx
+++ b/content/projects/spotify-web-clone.mdx
@@ -9,6 +9,13 @@ opensource: true
 categories:
   - Clone
   - Web
+techStack:
+  - TypeScript
+  - React
+  - Stripe
+  - Supabase
+  - PostgreSQL
+  - Tailwind CSS
 ---
 
 TODO
