--- a/content/projects/stocks-price-tracker-mobile-app.mdx
+++ b/content/projects/stocks-price-tracker-mobile-app.mdx
@@ -8,6 +8,12 @@ published: true
 opensource: true
 categories:
   - Mobile
+techStack:
+  - TypeScript
+  - React Native
+  - Expo
+  - GraphQL
+  - IBM StepZen
 ---
 
 TODO
