--- a/content/projects/uber-mobile-clone.mdx
+++ b/content/projects/uber-mobile-clone.mdx
@@ -9,6 +9,13 @@ opensource: true
 categories:
   - Clone
   - Mobile
+techStack:
+  - TypeScript
+  - React Native
+  - Expo
+  - Redux
+  - Tailwind CSS
+  - Google AutoComplete API
 ---
 
 TODO
