--- a/content/projects/voting-dapplication.mdx
+++ b/content/projects/voting-dapplication.mdx
@@ -9,6 +9,12 @@ opensource: true
 categories:
   - Blockchain
   - DApp
+techStack:
+  - Solidity
+  - Truffle
+  - Web3.js
+  - React
+  - TypeScript
 ---
 
 TODO
