--- a/content/projects/whatsapp-mobile-clone.mdx
+++ b/content/projects/whatsapp-mobile-clone.mdx
@@ -9,6 +9,14 @@ opensource: true
 categories:
   - Clone
   - Mobile
+techStack:
+  - TypeScript
+  - React Native
+  - Expo
+  - Reanimated
+  - Clerk
+  - Gestures
+  - Gifted Chat
 ---
 
 TODO
