--- a/content/projects/x-web-clone.mdx
+++ b/content/projects/x-web-clone.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Twitter Clone"
+title: "X Clone"
 description: "This is the Twitter Clone project."
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
@@ -9,6 +9,15 @@ opensource: true
 categories:
   - Clone
   - Web
+techStack:
+  - TypeScript
+  - React
+  - Next.js
+  - Tailwind CSS
+  - PrismaDB
+  - MongoDB
+  - NextAuth
+  - Vercel
 ---
 
 TODO
