--- a/content/projects/startup-equity-loan-system.mdx
+++ b/content/projects/startup-equity-loan-system.mdx
@@ -9,6 +9,12 @@ opensource: true
 categories:
   - Tool
   - Web
+techStack:
+  - TypeScript
+  - React
+  - Next.js
+  - Tailwind CSS
+
 ---
 
 TODO
