--- a/content/projects/telegram-mobile-clone.mdx
+++ b/content/projects/telegram-mobile-clone.mdx
@@ -9,6 +9,12 @@ opensource: true
 categories:
   - Clone
   - Mobile
+techStack:
+  - TypeScript
+  - React Native
+  - Expo
+  - Stream
+  - Supabase
 ---
 
 TODO
