--- a/content/projects/trello-web-clone.mdx
+++ b/content/projects/trello-web-clone.mdx
@@ -9,6 +9,14 @@ opensource: true
 categories:
   - Clone
   - Web
+techStack:
+  - TypeScript
+  - React
+  - Next.js
+  - Tailwind CSS
+  - Stripe
+  - PrismaDB
+  - MySQL
 ---
 
 TODO
