--- a/content/projects/3d-earth-with-three-js.mdx
+++ b/content/projects/3d-earth-with-three-js.mdx
@@ -1,6 +1,6 @@
 ---
 title: "3D Earth with Three.js"
-description: Low level utilities to build analytics tools on top of Redis.
+description: A 3D project that creates an interactive Earth model using React, TypeScript, and Three.js.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/3d-earth-with-three-js
