--- a/content/projects/ai-image-generation.mdx
+++ b/content/projects/ai-image-generation.mdx
@@ -1,6 +1,6 @@
 ---
 title: "AI Image Generation"
-description: Feature flags for your edge functions.
+description: An AI and Tool project focused on generating images using AI, built with React, TypeScript, Midjourney, MongoDB, Express, and Node.js.
 # date: "2022-12-12"
 # url: https://upstash.com/blog/edge-flags-beta
 repository: muumdev/ai-image-generation
