--- a/content/projects/ai-image-scale.mdx
+++ b/content/projects/ai-image-scale.mdx
@@ -1,6 +1,6 @@
 ---
 title: "AI Image Scale"
-description: A fully typed Kafka client built for Upstash Kafka and HTTP, perfect for serverless and edge runtimes
+description: An AI and Tool project designed to scale images using AI, built with React, TypeScript, Bytescale, Replicate, Vercel, Next.js, Auth.js, Upstash, and Redis.
 # date: "2022-01-08"
 # url: https://upstash.com/kafka
 repository: muumdev/ai-image-scale
