--- a/content/projects/ai-saas-chatbot.mdx
+++ b/content/projects/ai-saas-chatbot.mdx
@@ -1,6 +1,6 @@
 ---
 title: "AI SaaS Chatbot"
-description: "This is the AI SaaS Chatbot project."
+description: An AI and SaaS project that provides a chatbot service built with React, TypeScript, MongoDB, Express, Node, and OpenAI.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/ai-saas-chatbot
