--- a/content/projects/ai-voice-chatbot.mdx
+++ b/content/projects/ai-voice-chatbot.mdx
@@ -1,6 +1,6 @@
 ---
 title: AI Voice Chatbot
-description: A fully typed Redis client built for Upstash Redis and HTTP, perfect for serverless and edge runtimes.
+description: An AI and Chatbot project focused on voice interaction, built with React, TypeScript, FastAPI, and OpenAI.
 # date: "2022-03-14"
 # url: https://upstash.com/redis
 repository: muumdev/ai-voice-chatbot
