--- a/content/projects/amazon-price-scraping-tool.mdx
+++ b/content/projects/amazon-price-scraping-tool.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Amazon Price Scraping Tool"
-description: "This is the Amazon Price Scraping Tool project."
+description: A Web and Tool project for scraping Amazon prices, built with TypeScript and Next.js.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/amazon-price-scraping-tool
