--- a/content/projects/automated-scraping-bot.mdx
+++ b/content/projects/automated-scraping-bot.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Automated Scraping Bot"
-description: "This is the Automated Scraping Bot project."
+description: A Web and Tool project for automating web scraping, built with TypeScript, Node.js, and Puppeteer.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/automated-scraping-bot
