--- a/content/projects/deliveroo-mobile-clone.mdx
+++ b/content/projects/deliveroo-mobile-clone.mdx
@@ -1,6 +1,6 @@
 ---
 title: Deliveroo Mobile Clone
-description: A library to record and analyse Auth.js user behaviour
+description: A mobile application project that replicates the Deliveroo app experience using TypeScript, React Native, Expo, Zustand, Reanimated, and Google API.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/deliveroo-mobile-clone
