--- a/content/projects/finance-saas-platform.mdx
+++ b/content/projects/finance-saas-platform.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Finance SaaS Platform"
-description: "This is the Finance Platform project."
+description: A Web and SaaS project for managing finance, built with React, TypeScript, Next.js, and Honojs.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/finance-platform
