--- a/content/projects/markdown-editor.mdx
+++ b/content/projects/markdown-editor.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Markdown Editor"
-description: "This is the Markdown Editor project."
+description: A Web and Tool project for editing Markdown, built with TypeScript, Next.js, and Mantine UI.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/markdown-editor
