--- a/content/projects/messenger-web-clone.mdx
+++ b/content/projects/messenger-web-clone.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Messenger Clone"
-description: "This is the Messenger Clone project."
+description: A web application project that replicates the Messenger platform.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/messenger-web-clone
