--- a/content/projects/miro-web-clone.mdx
+++ b/content/projects/miro-web-clone.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Miro Clone"
-description: "This is the Miro Clone project."
+description: A web application project that replicates the Miro platform using Next.js, TypeScript, Tailwind CSS, PrismaDB, MongoDB, NextAuth, and Pusher.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/miro-web-clone
