--- a/content/projects/rest-api-ai-saas.mdx
+++ b/content/projects/rest-api-ai-saas.mdx
@@ -1,6 +1,6 @@
 ---
 title: "REST API AI SaaS"
-description: "This is the REST API AI SaaS project."
+description: A Web, AI, and SaaS project for building a REST API-driven AI service, using TypeScript, NestJS, Node.js, PostgreSQL, and PrismaDB.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/rest-api-ai-saas
