--- a/content/projects/telegram-mobile-clone.mdx
+++ b/content/projects/telegram-mobile-clone.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Telegram Mobile Clone"
-description: "This is the Telegram Mobile Clone project."
+description: A mobile clone of Telegram, built with TypeScript, React Native, Expo, Stream for messaging, and Supabase for backend services.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/telegram-mobile-clone
