--- a/content/projects/trello-web-clone.mdx
+++ b/content/projects/trello-web-clone.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Trello Clone"
-description: "This is the Trello Clone project."
+description: "A web application clone of Trello, built with TypeScript, React, Next.js, Tailwind CSS for styling, Stripe for payments, PrismaDB, and MySQL for database management."
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/trello-web-clone
