--- a/content/projects/whatsapp-mobile-clone.mdx
+++ b/content/projects/whatsapp-mobile-clone.mdx
@@ -1,6 +1,6 @@
 ---
 title: "WhatsApp Mobile Clone"
-description: "This is the WhatsApp Mobile Clone project."
+description: "This is a mobile application replicating the core features of WhatsApp, including messaging, chat management, and notifications, built with React Native and Expo."
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/whatsapp-mobile-clone
