--- a/content/projects/x-web-clone.mdx
+++ b/content/projects/x-web-clone.mdx
@@ -1,6 +1,6 @@
 ---
 title: "X Clone"
-description: "This is the Twitter Clone project."
+description: "This is a web application replicating the core features of Twitter, including tweet management, user profiles, and notifications, built with React and Next.js."
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/x-web-clone
