--- a/content/projects/3d-building-on-mapbox.mdx
+++ b/content/projects/3d-building-on-mapbox.mdx
@@ -1,6 +1,6 @@
 ---
 title: 3D Building on MapBox
-description: Show 3D buildings on Map with MapBox and Deck.gl
+description: A 3D and Web project that demonstrates how to display 3D buildings on a map using React, TypeScript, MapBox, and Deck.gl.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/3d-building-on-mapbox
