--- a/content/projects/3d-developer-portfolio.mdx
+++ b/content/projects/3d-developer-portfolio.mdx
@@ -1,6 +1,6 @@
 ---
 title: 3D Developer Portfolio
-description: Portfolio for developers with 3D effects.
+description: A 3D and Web portfolio project that showcases developers' work with interactive 3D effects using React, TypeScript, and Three.js.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/3d-developer-portfolio
