--- a/content/projects/admin-dashboard.mdx
+++ b/content/projects/admin-dashboard.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Admin Dashboard"
-description: "This is the Admin Dashboard project."
+description: A Web and Dashboard project featuring an Admin Dashboard built with React, TypeScript, Node, Express, and MongoDB.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/admin-dashboard
