--- a/content/projects/ai-driven-saas-application.mdx
+++ b/content/projects/ai-driven-saas-application.mdx
@@ -1,6 +1,6 @@
 ---
 title: "AI-Driven SaaS Application"
-description:  The application is an AI assisted copy/branding generator, which creates snippets and keywords for our customers based on their brand
+description: An AI and SaaS application that generates copy, branding snippets, and keywords using AI, built with React, TypeScript, Python, AWS, and OpenAI.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/ai-driven-saas-application
