--- a/content/projects/ai-powered-3d-website.mdx
+++ b/content/projects/ai-powered-3d-website.mdx
@@ -1,6 +1,6 @@
 ---
 title: AI-Powered 3D Website
-description: 3D shop website
+description: A 3D, AI, and E-Commerce project that features a 3D shop website powered by AI, built with React, TypeScript, Three.js, and OpenAI.
 # date: "2022-01-08"
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/ai-powered-3d-website
