--- a/content/projects/airbnb-mobile-clone.mdx
+++ b/content/projects/airbnb-mobile-clone.mdx
@@ -1,6 +1,6 @@
 ---
 title: Airbnb Mobile Clone
-description: A library to record and analyse Auth.js user behaviour
+description: A mobile application project that replicates the Airbnb mobile experience using TypeScript, Expo, Reanimated, and Clerk.
 # date: "2022-03-14"
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/airbnb-mobile-clone
