--- a/content/projects/algorithm-visualize.mdx
+++ b/content/projects/algorithm-visualize.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Algorithm Visualize"
-description: "This is the Algorithm Visualize project."
+description: A Web and Tool project that visualizes algorithms, built with React, Next.js, TypeScript, and Mantine UI.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/algorithm-visualize
