--- a/content/projects/amazon-web-clone.mdx
+++ b/content/projects/amazon-web-clone.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Amazon Clone"
-description: "This is the Amazon Clone project."
+description: A web application project that replicates the Amazon platform using TypeScript, React, Webhooks, Stripe, Firestore, and NextAuth.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/amazon-web-clone
