--- a/content/projects/api-usage-dashboard.mdx
+++ b/content/projects/api-usage-dashboard.mdx
@@ -1,6 +1,6 @@
 ---
 title: "API Usage Dashboard"
-description: "This is the API Usage Dashboard project."
+description: A Web and Dashboard project that tracks API usage, built with TypeScript, Next.js, and Mantine UI.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/api-usage-dashboard
