--- a/content/projects/apple-wallet-mobile-clone.mdx
+++ b/content/projects/apple-wallet-mobile-clone.mdx
@@ -1,6 +1,6 @@
 ---
 title: Apple Wallet Mobile Clone
-description: A library to record and analyse Auth.js user behaviour
+description: A mobile application project that replicates the Apple Wallet experience using TypeScript, React Native, and Reanimated.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/apple-wallet-mobile-clone
