--- a/content/projects/blackboard-simulator.mdx
+++ b/content/projects/blackboard-simulator.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Blackboard Simulator"
-description: "Blackboard with chalk. It must simulate the class black boards, with drawing, chalk style and chalk audio"
+description: A Web and Tool project that simulates a classroom blackboard with drawing, chalk style, and chalk audio, built with React, Redux, Canvas API, TypeScript, and Fabric.js.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/blackboard-simulator
