--- a/content/projects/booking.com-web-clone.mdx
+++ b/content/projects/booking.com-web-clone.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Booking.com Clone"
-description: "This is the Booking.com Clone project."
+description: A web application project that replicates the Booking.com platform using Oxylabs, Next.js, Tailwind CSS, TypeScript, Storybook, and ShadCN.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/booking.com-web-clone
