--- a/content/projects/currency-exchange-dapp.mdx
+++ b/content/projects/currency-exchange-dapp.mdx
@@ -1,6 +1,6 @@
 ---
 title: Currency Exchange DApp
-description: A library to record and analyse web page traffic and user behaviour
+description: A Blockchain, DApp, and Web3 project for currency exchange, built with TypeScript, Web3.js, Solidity, Ethers.js, React, GraphQL, and Apollo.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/currency-exchange-dapp
