--- a/content/projects/duolingo-web-clone.mdx
+++ b/content/projects/duolingo-web-clone.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Duolingo Clone"
-description: "This is the Duolingo Clone project."
+description: A web application project that replicates the Duolingo platform using React, TypeScript, Next.js, Drizzle, and Stripe.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/duolingo-web-clone
