--- a/content/projects/e-commerce-with-dashboard.mdx
+++ b/content/projects/e-commerce-with-dashboard.mdx
@@ -1,6 +1,6 @@
 ---
 title: "E-Commerce with Dashboard"
-description: "This is the E-Commerce with Dashboard project."
+description: A Web and Dashboard project that integrates e-commerce functionality with a dashboard, built with React, TypeScript, Next.js, Tailwind CSS, PrismaDB, and MySQL.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/e-commerce-with-dashboard
