--- a/content/projects/facetime-mobile-clone.mdx
+++ b/content/projects/facetime-mobile-clone.mdx
@@ -1,6 +1,6 @@
 ---
 title: "FaceTime Mobile Clone"
-description: "This is the FaceTime Mobile Clone project."
+description: A mobile application project that replicates the FaceTime experience using React Native, TypeScript, and Stream.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/facetime-mobile-clone
