--- a/content/projects/fintech-mobile-app.mdx
+++ b/content/projects/fintech-mobile-app.mdx
@@ -1,6 +1,6 @@
 ---
 title: "FinTech Mobile App"
-description: "This is the FinTech Mobile App project."
+description: A Web and SaaS project for managing finance, built with React, TypeScript, Next.js, and Honojs.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/fintech-mobile-app
