--- a/content/projects/full-mern-website.mdx
+++ b/content/projects/full-mern-website.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Full MERN Website"
-description: "This is the Full MERN Website project."
+description: A Fullstack Web project built with the MERN stack, incorporating React, TypeScript, Node.js, GraphQL, Apollo, Docker, MongoDB, Express, NestJS, and Tailwind CSS.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/full-mern-website
