--- a/content/projects/google-meet-web-clone.mdx
+++ b/content/projects/google-meet-web-clone.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Google Meet Clone"
-description: "This is the Google Meet Clone project."
+description: A web application project that replicates the Google Meet platform using React, TypeScript, WebRTC, and Socket.IO.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/google-meet-web-clone
