--- a/content/projects/imessage-mobile-clone.mdx
+++ b/content/projects/imessage-mobile-clone.mdx
@@ -1,6 +1,6 @@
 ---
 title: "iMessage Mobile Clone"
-description: "This is the iMessage Mobile Clone project."
+description: A mobile application project that replicates the iMessage experience using React Native, TypeScript, and Stream.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/imessage-mobile-clone
