--- a/content/projects/instagram-mobile-clone.mdx
+++ b/content/projects/instagram-mobile-clone.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Instagram Mobile Clone"
-description: "This is the Instagram Mobile Clone project."
+description: A mobile application project that replicates the Instagram app experience using React Native, TypeScript, Firebase, Formik, and Yup.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/instagram-mobile-clone
