--- a/content/projects/json-convertor.mdx
+++ b/content/projects/json-convertor.mdx
@@ -1,6 +1,6 @@
 ---
 title: "JSON Convertor"
-description: "This is the JSON Convertor project."
+description: A Web and Tool project for converting JSON data, built with Next.js, TypeScript, and Mantine UI.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/json-convertor
