--- a/content/projects/linkedin-mobile-clone.mdx
+++ b/content/projects/linkedin-mobile-clone.mdx
@@ -1,6 +1,6 @@
 ---
 title: "LinkedIn Mobile Clone"
-description: "This is the LinkedIn Mobile Clone project."
+description: A mobile application project that replicates the LinkedIn app experience using React Native, TypeScript, and Stepzen.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/linkedin-mobile-clone
