--- a/content/projects/multiplayer-mobile-game.mdx
+++ b/content/projects/multiplayer-mobile-game.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Multiplayer Mobile Game"
-description: "This is the Multiplayer Mobile Game project."
+description: A Mobile and Game project for creating a multiplayer game, built with React Native, TypeScript, Supabase, and Skia.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/multiplayer-mobile-game
