--- a/content/projects/multiplayer-tic-tac-toe.mdx
+++ b/content/projects/multiplayer-tic-tac-toe.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Multiplayer Tic-Tac-Toe"
-description: "This is the Multiplayer Tic-Tac-Toe project."
+description: A Web and Game project for creating a multiplayer Tic-Tac-Toe game, built with React, TypeScript, Socket.io, and Node.js.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/multiplayer-tic-tac-toe
