--- a/content/projects/netflix-web-clone.mdx
+++ b/content/projects/netflix-web-clone.mdx
@@ -1,11 +1,23 @@
 ---
 title: "Netflix Clone"
-description: "This is the Netflix Clone project."
+description: A web application project that replicates the Netflix platform using TypeScript, React, Tailwind CSS, NextAuth, Next.js, PrismaDB, MongoDB, and Vercel.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/netflix-web-clone
 published: true
 opensource: true
+categories:
+  - Clone
+  - Web
+techStack:
+  - TypeScript
+  - React
+  - Tailwind CSS
+  - NextAuth
+  - Next.js
+  - PrismDB
+  - MongoDB
+  - Vercel
 ---
 
 TODO
