--- a/content/projects/notion-web-clone.mdx
+++ b/content/projects/notion-web-clone.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Notion Clone"
-description: "This is the Notion Clone project."
+description: A web application project that replicates the Notion platform using React, TypeScript, Tailwind CSS, NextAuth, and Convex.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/notion-web-clone
