--- a/content/projects/react-performance-checklist.mdx
+++ b/content/projects/react-performance-checklist.mdx
@@ -1,6 +1,6 @@
 ---
 title: "React Performance Checklist"
-description: "This is the React Performance Checklist project."
+description: A Web and Tool project that provides a performance checklist for React applications, built with React, TypeScript, Next.js, Mantine UI, Firestore, and NextAuth.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/react-performance-checklist
