--- a/content/projects/real-time-admin-dashboard.mdx
+++ b/content/projects/real-time-admin-dashboard.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Real-Time Admin Dashboard"
-description: "This is the Real-Time Admin Dashboard project."
+description: A Web and Dashboard project that provides real-time administrative capabilities, built with React, Refine, TypeScript, Mantine UI, and GraphQL.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/real-time-admin-dashboard
