--- a/content/projects/saas-ai-platform.mdx
+++ b/content/projects/saas-ai-platform.mdx
@@ -1,6 +1,6 @@
 ---
 title: "SaaS AI Platform"
-description: "This is the SaaS AI Platform project."
+description: A Web, AI, and SaaS project for building an AI platform, developed with TypeScript, React, Next.js, Node.js, PostgreSQL, PrismaDB, Tailwind CSS, and Stripe.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/saas-ai-platform
