--- a/content/projects/saas-automation-builder.mdx
+++ b/content/projects/saas-automation-builder.mdx
@@ -1,6 +1,6 @@
 ---
 title: "SaaS Automation Builder"
-description: "This is the SaaS Automation Builder project."
+description: A Web and SaaS project for building automation tools, utilizing TypeScript, React, Next.js, Clerk, Stripe, and Bun.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/web-analytics
