--- a/content/projects/saas-website-builder.mdx
+++ b/content/projects/saas-website-builder.mdx
@@ -1,6 +1,6 @@
 ---
 title: "SaaS Website Builder"
-description: "This is the SaaS Website Builder project."
+description: A Web and SaaS project for building websites, using TypeScript, React, Next.js, Stripe, PrismaDB, MySQL, and Bun.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/web-analytics
