--- a/content/projects/spotify-web-clone.mdx
+++ b/content/projects/spotify-web-clone.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Spotify Clone"
-description: "This is the Spotify Clone project."
+description: A web application project that replicates the Spotify platform using TypeScript, React, Stripe, Supabase, PostgreSQL, and Tailwind CSS.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/spotify-web-clone
