--- a/content/projects/startup-equity-loan-system.mdx
+++ b/content/projects/startup-equity-loan-system.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Startup Equity Loan System"
-description: "This is the Startup Equity Loan System project."
+description: A Web tool designed to manage and streamline startup equity loan processes using TypeScript, React, Next.js, and Tailwind CSS.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/startup-equity-loan-system
