--- a/content/projects/stocks-price-tracker-mobile-app.mdx
+++ b/content/projects/stocks-price-tracker-mobile-app.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Stocks Price Tracker Mobile App"
-description: "This is the Stocks Price Tracker Mobile App project."
+description: A mobile app for tracking stock prices, built with TypeScript, React Native, Expo, and GraphQL using IBM StepZen for data management.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/stocks-price-tracker-mobile-app
