--- a/content/projects/uber-mobile-clone.mdx
+++ b/content/projects/uber-mobile-clone.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Uber Mobile Clone"
-description: "This is the Uber Mobile Clone project."
+description: "A mobile application clone of Uber, built with TypeScript, React Native, and Expo for cross-platform development. Includes Redux for state management, Tailwind CSS for styling, and Google AutoComplete API for location services."
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/uber-mobile-clone
