--- a/content/projects/virtual-3d-art-gallery.mdx
+++ b/content/projects/virtual-3d-art-gallery.mdx
@@ -1,6 +1,6 @@
 ---
 title: Virtual 3D Art Gallery
-description: A library to record and analyse Auth.js user behaviour
+description: "A virtual 3D art gallery built with Three.js and React, allowing users to explore and interact with art pieces in a 3D space."
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/virtual-3d-art-gallery
