--- a/content/projects/voting-dapplication.mdx
+++ b/content/projects/voting-dapplication.mdx
@@ -1,6 +1,6 @@
 ---
 title: Voting DApplication
-description: A library to record and analyse Auth.js user behaviour
+description: "A decentralized application (DApp) for voting, built with Solidity and Truffle for smart contracts, and React with TypeScript for the front-end."
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: muumdev/voting-dapplication
