github repo names changed

--- a/content/projects/ai-image-scale.mdx
+++ b/content/projects/ai-image-scale.mdx
@@ -3,7 +3,7 @@ title: "AI Image Scale"
 description: An AI and Tool project designed to scale images using AI, built with React, TypeScript, Bytescale, Replicate, Vercel, Next.js, Auth.js, Upstash, and Redis.
 # date: "2022-01-08"
 # url: https://upstash.com/kafka
-repository: muumdev/ai-image-scale
+repository: alimuratumutlu/ai-image-scale
 published: true
 opensource: true
 categories:
