--- a/content/projects/ai-saas-chatbot.mdx
+++ b/content/projects/ai-saas-chatbot.mdx
@@ -3,7 +3,7 @@ title: "AI SaaS Chatbot"
 description: An AI and SaaS project that provides a chatbot service built with React, TypeScript, MongoDB, Express, Node, and OpenAI.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
-repository: muumdev/ai-saas-chatbot
+repository: alimuratumutlu/ai-saas-chatbot
 published: true
 opensource: true
 categories:
