--- a/content/projects/muum-ai.mdx
+++ b/content/projects/muum-ai.mdx
@@ -3,7 +3,7 @@ title: muum.ai
 description: Muum AI is an AI platform that helps your startup grow faster by increasing your sales. Digital. Best of all, you can create posts for your social media accounts and blogs with AI. Wordpress, Shopify, WooCommerce, and other platforms are in support plan. The platform is built with Nextjs, Mantine UI, Turbo and hosted on Vercel.
 date: "2024-08-01"
 url: https://muum.ai
-repository: muumdev/muum-ai
+repository: alimuratumutlu/muum-ai
 published: true
 opensource: false
 ---
