--- a/content/projects/muum-app.mdx
+++ b/content/projects/muum-app.mdx
@@ -3,7 +3,7 @@ title: muum.app
 description: Muum.app is our development company where all our apps are developed. The website is built with Gatsby and Tailwind CSSand hosted on Netlify.
 date: "2024-08-01"
 url: https://muum.app
-repository: muumdev/muum-app
+repository: alimuratumutlu/muum-app
 published: true
 opensource: false
 ---
