--- a/content/projects/saas-website-builder.mdx
+++ b/content/projects/saas-website-builder.mdx
@@ -3,7 +3,7 @@ title: "SaaS Website Builder"
 description: A Web and SaaS project for building websites, using TypeScript, React, Next.js, Stripe, PrismaDB, MySQL, and Bun.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
-repository: muumdev/web-analytics
+repository: alimuratumutlu/web-analytics
 published: true
 opensource: true
 categories:
