--- a/content/projects/admin-dashboard.mdx
+++ b/content/projects/admin-dashboard.mdx
@@ -3,7 +3,7 @@ title: "Admin Dashboard"
 description: A Web and Dashboard project featuring an Admin Dashboard built with React, TypeScript, Node, Express, and MongoDB.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
-repository: muumdev/admin-dashboard
+repository: alimuratumutlu/admin-dashboard
 published: true
 opensource: true
 categories:
