--- a/content/projects/json-convertor.mdx
+++ b/content/projects/json-convertor.mdx
@@ -3,7 +3,7 @@ title: "JSON Convertor"
 description: A Web and Tool project for converting JSON data, built with Next.js, TypeScript, and Mantine UI.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
-repository: muumdev/json-convertor
+repository: alimuratumutlu/json-convertor
 published: true
 opensource: true
 categories:
