--- a/content/projects/markdown-editor.mdx
+++ b/content/projects/markdown-editor.mdx
@@ -3,7 +3,7 @@ title: "Markdown Editor"
 description: A Web and Tool project for editing Markdown, built with TypeScript, Next.js, and Mantine UI.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
-repository: muumdev/markdown-editor
+repository: alimuratumutlu/markdown-editor
 published: true
 opensource: true
 categories:
