--- a/content/projects/miro-web-clone.mdx
+++ b/content/projects/miro-web-clone.mdx
@@ -3,7 +3,7 @@ title: "Miro Clone"
 description: A web application project that replicates the Miro platform using Next.js, TypeScript, Tailwind CSS, PrismaDB, MongoDB, NextAuth, and Pusher.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
-repository: muumdev/miro-web-clone
+repository: alimuratumutlu/miro-web-clone
 published: true
 opensource: true
 categories:
