--- a/content/projects/muum-network.mdx
+++ b/content/projects/muum-network.mdx
@@ -3,7 +3,7 @@ title: muum.network
 description: A network of web applications for the Muum project. These website are mostly designed for everyday purposes such as shopping, comparing products, and more. The main income source of the Muum Network is affiliate marketing and ads. Business, Finance, Shopping, Education are the main topics of the network websites. Network websites are built with Next.js, Content Layer and Tailwind CSS and hosted on Vercel.
 date: "2024-08-01"
 url: https://muum.network
-repository: muumdev/muum-network
+repository: alimuratumutlu/muum-network
 published: true
 opensource: false
 ---
