--- a/content/projects/saas-automation-builder.mdx
+++ b/content/projects/saas-automation-builder.mdx
@@ -3,7 +3,7 @@ title: "SaaS Automation Builder"
 description: A Web and SaaS project for building automation tools, utilizing TypeScript, React, Next.js, Clerk, Stripe, and Bun.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
-repository: muumdev/web-analytics
+repository: alimuratumutlu/web-analytics
 published: true
 opensource: true
 categories:
