--- a/content/projects/3d-building-on-map.mdx
+++ b/content/projects/3d-building-on-map.mdx
@@ -3,7 +3,7 @@ title: 3D Building on MapBox
 description: A 3D and Web project that demonstrates how to display 3D buildings on a map using React, TypeScript, MapBox, and Deck.gl.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
-repository: alimuratumutlu/3d-building-on-mapbox
+repository: alimuratumutlu/3d-building-on-map
 published: true
 opensource: true
 categories:
@@ -14,6 +14,7 @@ techStack:
   - TypeScript
   - MapBox
   - Deck.gl
+class: muumdev
 ---
 
 TODO
