--- a/content/projects/messenger-web-clone.mdx
+++ b/content/projects/messenger-web-clone.mdx
@@ -10,7 +10,14 @@ categories:
   - Clone
   - Web
 techStack:
-  - 
+  - React
+  - TypeScript
+  - Next.js
+  - Tailwind CSS
+  - PrismaDB
+  - MongoDB
+  - NextAuth
+class: muumdev
 ---
 
 TODO
