--- a/content/projects/muum-app.mdx
+++ b/content/projects/muum-app.mdx
@@ -3,10 +3,23 @@ title: muum.app
 description: Muum.app is our development company where all our apps are developed. The website is built with Gatsby and Tailwind CSSand hosted on Netlify.
 date: "2024-08-01"
 url: https://muum.app
-repository: alimuratumutlu/muum-app
 published: true
 opensource: false
 ---
 
+## Productivity Mobile Apps
 
-TODO
+1. **TaskFlow**
+   Description: A smart task management app that uses AI to prioritize and schedule your tasks based on urgency, importance, and your personal productivity patterns.
+
+2. **FocusZone**
+   Description: An app that combines the Pomodoro technique with ambient sounds and screen dimming to create the perfect focus environment for deep work sessions.
+
+3. **HabitBuilder**
+   Description: A habit tracking app that gamifies the process of building new habits, offering rewards, challenges, and social accountability features.
+
+4. **MindMap Master**
+   Description: A visual brainstorming and note-taking app that allows users to create interactive mind maps with voice-to-text and handwriting recognition.
+
+5. **TimeWise**
+   Description: An intelligent time-tracking app that automatically categorizes your activities and provides insights to help you optimize your daily routines.
