Refactor project and open-source page headers

--- a/content/projects/3d-earth-with-three-js.mdx
+++ b/content/projects/3d-earth-with-three-js.mdx
@@ -4,6 +4,7 @@ description: A 3D project that creates an interactive Earth model using React, T
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
 repository: alimuratumutlu/3d-earth-with-three-js
+url: https://earth.muum.dev
 published: true
 opensource: true
 categories:
