Refactor project and open-source page headers, add YouTube video support

--- a/content/projects/3d-earth-with-three-js.mdx
+++ b/content/projects/3d-earth-with-three-js.mdx
@@ -11,9 +11,11 @@ categories:
   - 3D
 techStack:
   - React
+  - Vite
   - TypeScript
   - Three.js
 class: muumdev
+youtube: https://youtu.be/Haz0YUKFWB8?si=sw_VZAG56yiEeebT
 ---
 
 TODO
