Refactor project and open-source page headers, remove YouTube video support

--- a/content/projects/muum-dev.mdx
+++ b/content/projects/muum-dev.mdx
@@ -3,6 +3,7 @@ title: muum.dev
 description: My and my software company's website. The website is built with Next.js, Content Layer and Tailwind CSS and hosted on Vercel. It is forked from chronark project.
 date: "2024-08-01"
 url: https://muum.dev
+repository: alimuratumutlu/muum.dev
 published: true
 opensource: false
 ---
