Update project dates in 3D Developer Portfolio and 3D Earth with Three.js

--- a/content/projects/3d-earth-with-three-js.mdx
+++ b/content/projects/3d-earth-with-three-js.mdx
@@ -1,10 +1,9 @@
 ---
 title: "3D Earth with Three.js"
 description: A 3D project that creates an interactive Earth model using React, TypeScript, and Three.js.
-# date: 2024-08-13
-# url: https://console.upstash.com/ratelimit
-repository: alimuratumutlu/3d-earth-with-three-js
+date: 2024-10-27
 url: https://earth.muum.dev
+repository: alimuratumutlu/3d-earth-with-three-js
 published: true
 opensource: true
 categories:
