Refactor project metadata in 3D Building on MapBox

--- a/content/projects/3d-building-on-map.mdx
+++ b/content/projects/3d-building-on-map.mdx
@@ -1,9 +1,9 @@
 ---
 title: 3D Building on MapBox
 description: A 3D and Web project that demonstrates how to display 3D buildings on a map using React, TypeScript, MapBox, and Deck.gl.
-# date: 2024-08-13
-# url: https://console.upstash.com/ratelimit
-repository: alimuratumutlu/3d-building-on-map
+date: 2024-10-26
+url: https://map.muum.dev
+repository: alimuratumutlu//3D-buildings-on-map
 published: true
 opensource: true
 categories:
