--- a/content/projects/algorithm-visualize.mdx
+++ b/content/projects/algorithm-visualize.mdx
@@ -1,9 +1,8 @@
 ---
 title: "Algorithm Visualize"
 description: A Web and Tool project that visualizes algorithms, built with React, Next.js, TypeScript, and Mantine UI.
-# date: 2024-08-13
-# url: https://console.upstash.com/ratelimit
-repository: alimuratumutlu/algorithm-visualize
+date: 2024-10-28
+url: https://algo.muum.dev
 published: true
 opensource: true
 categories:
