Refactor project metadata in Finance Dashboard

--- a/content/projects/finance-saas-platform.mdx
+++ b/content/projects/finance-saas-platform.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Finance SaaS Platform"
-description: A Web and SaaS project for managing finance, built with React, TypeScript, Next.js, and Honojs.
-# date: 2024-08-13
-# url: https://console.upstash.com/ratelimit
-repository: alimuratumutlu/finance-platform
+title: "Finance Dashboard"
+description: A dashboard for managing finance, built with React, TypeScript, Next.js, and Honojs.
+date: 2024-10-28
+url: https://finance.muum.dev
+repository: alimuratumutlu/finance-dashboard
 published: true
 opensource: true
 categories:
