Refactor project metadata in Finance Dashboard: Updated categories in finance-saas-platform.mdx

--- a/content/projects/finance-saas-platform.mdx
+++ b/content/projects/finance-saas-platform.mdx
@@ -7,7 +7,7 @@ repository: alimuratumutlu/finance-dashboard
 published: true
 opensource: true
 categories:
-  - SaaS
+  - Dashboard
   - Web
 techStack:
   - React
