--- a/content/projects/blackboard-simulator.mdx
+++ b/content/projects/blackboard-simulator.mdx
@@ -1,9 +1,8 @@
 ---
 title: "Blackboard Simulator"
 description: A Web and Tool project that simulates a classroom blackboard with drawing, chalk style, and chalk audio, built with React, Redux, Canvas API, TypeScript, and Fabric.js.
-# date: 2024-08-13
-# url: https://console.upstash.com/ratelimit
-repository: alimuratumutlu/blackboard-simulator
+date: 2024-10-28
+url: https://blackboard.muum.dev
 published: true
 opensource: true
 categories:
