Refactor project metadata in API Usage Dashboard: Updated date and URL

--- a/content/projects/postman-clone-kingsman.mdx
+++ b/content/projects/postman-clone-kingsman.mdx
@@ -1,9 +1,8 @@
 ---
 title: "API Usage Dashboard"
 description: A Web and Dashboard project that tracks API usage, built with TypeScript, Next.js, and Mantine UI.
-# date: 2024-08-13
-# url: https://console.upstash.com/ratelimit
-repository: alimuratumutlu/api-usage-dashboard
+date: 2024-10-28
+url: https://kingsman.muum.dev
 published: true
 opensource: true
 categories:
