--- a/content/projects/postman-clone-kingsman.mdx
+++ b/content/projects/postman-clone-kingsman.mdx
@@ -1,5 +1,5 @@
 ---
-title: "API Usage Dashboard"
+title: "Kingsman Postman Clone"
 description: A Web and Dashboard project that tracks API usage, built with TypeScript, Next.js, and Mantine UI.
 date: 2024-10-28
 url: https://kingsman.muum.dev
