Refactor project metadata: Update challenge description in page.tsx

--- a/content/projects/muum-codes.mdx
+++ b/content/projects/muum-codes.mdx
@@ -5,7 +5,7 @@ date: "2024-08-01"
 url: https://muum.codes
 repository: alimuratumutlu/github-repo-explorer
 published: true
-opensource: true
+opensource: false
 categories:
   - Web
 techStack:
