Refactor project metadata: Update project title in ai-driven-saas-application.mdx

--- a/content/projects/ai-driven-saas-application.mdx
+++ b/content/projects/ai-driven-saas-application.mdx
@@ -1,5 +1,5 @@
 ---
-title: "AI-Driven SaaS Application"
+title: "AI SaaS App"
 description: An AI and SaaS application that generates copy, branding snippets, and keywords using AI, built with React, TypeScript, Python, AWS, and OpenAI.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
