--- a/content/projects/trello-clone.mdx
+++ b/content/projects/trello-clone.mdx
@@ -1,9 +1,8 @@
 ---
 title: "Trello Clone"
 description: "A web application clone of Trello, built with TypeScript, React, Next.js, Tailwind CSS for styling, Stripe for payments, PrismaDB, and MySQL for database management."
-# date: 2024-08-13
-# url: https://console.upstash.com/ratelimit
-repository: alimuratumutlu/trello-web-clone
+date: 2024-10-29
+url: https://trello.muum.dev
 published: true
 opensource: true
 categories:
