Refactor project metadata: Update project titles

--- a/content/projects/postman-clone.mdx
+++ b/content/projects/postman-clone.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Kingsman Postman Clone"
+title: "Postman Clone"
 description: A Web and Dashboard project that tracks API usage, built with TypeScript, Next.js, and Mantine UI.
 date: 2024-10-28
 url: https://kingsman.muum.dev
