--- a/content/projects/react-performance.mdx
+++ b/content/projects/react-performance.mdx
@@ -1,5 +1,5 @@
 ---
-title: "React Performance Checklist"
+title: "React Performance"
 description: A Web and Tool project that provides a performance checklist for React applications, built with React, TypeScript, Next.js, Mantine UI, Firestore, and NextAuth.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
