--- a/content/projects/stocks-price-tracker.mdx
+++ b/content/projects/stocks-price-tracker.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Stocks Price Tracker Mobile App"
+title: "Stocks Price Tracker"
 description: A mobile app for tracking stock prices, built with TypeScript, React Native, Expo, and GraphQL using IBM StepZen for data management.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
