--- a/content/projects/amazon-price-scraper.mdx
+++ b/content/projects/amazon-price-scraper.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Amazon Price Scraping Tool"
+title: "Amazon Price Scraper"
 description: A Web and Tool project for scraping Amazon prices, built with TypeScript and Next.js.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
