--- a/content/projects/apple-wallet-clone.mdx
+++ b/content/projects/apple-wallet-clone.mdx
@@ -1,5 +1,5 @@
 ---
-title: Apple Wallet Mobile Clone
+title: Apple Wallet Clone
 description: A mobile application project that replicates the Apple Wallet experience using TypeScript, React Native, and Reanimated.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
