--- a/content/projects/equity-loan-system.mdx
+++ b/content/projects/equity-loan-system.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Startup Equity Loan System"
+title: "Equity Loan System"
 description: A Web tool designed to manage and streamline startup equity loan processes using TypeScript, React, Next.js, and Tailwind CSS.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
