--- a/content/projects/imessage-mobile.mdx
+++ b/content/projects/imessage-mobile.mdx
@@ -1,5 +1,5 @@
 ---
-title: "iMessage Mobile Clone"
+title: "iMessage Clone"
 description: A mobile application project that replicates the iMessage experience using React Native, TypeScript, and Stream.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
