--- a/content/projects/multiplayer-game.mdx
+++ b/content/projects/multiplayer-game.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Multiplayer Mobile Game"
+title: "Multiplayer Game"
 description: A Mobile and Game project for creating a multiplayer game, built with React Native, TypeScript, Supabase, and Skia.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
