--- a/content/projects/notification-system.mdx
+++ b/content/projects/notification-system.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Real-Time Notification System"
+title: "Notification System"
 description: A Web and Tool project for building a real-time notification system, utilizing TypeScript, React, Next.js, Mantine UI, GraphQL, Apollo Client, PostgreSQL, Redis, WebSockets, Helm, GitHub Actions, Nginx, Let's Encrypt, and Vercel.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
