Refactor project metadata: Remove NFT from project categories

--- a/content/projects/airbnb-mobile-clone.mdx
+++ b/content/projects/airbnb-mobile-clone.mdx
@@ -1,5 +1,5 @@
 ---
-title: Airbnb Mobile Clone
+title: Airbnb Clone
 description: A mobile application project that replicates the Airbnb mobile experience using TypeScript, Expo, Reanimated, and Clerk.
 # date: "2022-03-14"
 # url: https://console.upstash.com/ratelimit
