--- a/content/projects/deliveroo-mobile-clone.mdx
+++ b/content/projects/deliveroo-mobile-clone.mdx
@@ -1,5 +1,5 @@
 ---
-title: Deliveroo Mobile Clone
+title: Deliveroo Clone
 description: A mobile application project that replicates the Deliveroo app experience using TypeScript, React Native, Expo, Zustand, Reanimated, and Google API.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
