--- a/content/projects/e-commerce-dashboard.mdx
+++ b/content/projects/e-commerce-dashboard.mdx
@@ -1,5 +1,5 @@
 ---
-title: "E-Commerce Dashboard"
+title: "E-Commerce Panel"
 description: A Web and Dashboard project that integrates e-commerce functionality with a dashboard, built with React, TypeScript, Next.js, Tailwind CSS, PrismaDB, and MySQL.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
