--- a/content/projects/saas-automation-builder.mdx
+++ b/content/projects/saas-automation-builder.mdx
@@ -1,5 +1,5 @@
 ---
-title: "SaaS Automation Builder"
+title: "SaaS Automation"
 description: A Web and SaaS project for building automation tools, utilizing TypeScript, React, Next.js, Clerk, Stripe, and Bun.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
