--- a/content/projects/whatsapp-mobile-clone.mdx
+++ b/content/projects/whatsapp-mobile-clone.mdx
@@ -1,5 +1,5 @@
 ---
-title: "WhatsApp Mobile Clone"
+title: "WhatsApp Clone"
 description: "This is a mobile application replicating the core features of WhatsApp, including messaging, chat management, and notifications, built with React Native and Expo."
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
