--- a/content/projects/currency-exchange-dapp.mdx
+++ b/content/projects/currency-exchange-dapp.mdx
@@ -1,5 +1,5 @@
 ---
-title: Currency Exchange DApp
+title: Currency DApp
 description: A Blockchain, DApp, and Web3 project for currency exchange, built with TypeScript, Web3.js, Solidity, Ethers.js, React, GraphQL, and Apollo.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
