--- a/content/projects/linkedin-mobile-clone.mdx
+++ b/content/projects/linkedin-mobile-clone.mdx
@@ -1,5 +1,5 @@
 ---
-title: "LinkedIn Mobile Clone"
+title: "LinkedIn Clone"
 description: A mobile application project that replicates the LinkedIn app experience using React Native, TypeScript, and Stepzen.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
