--- a/content/projects/uber-mobile-clone.mdx
+++ b/content/projects/uber-mobile-clone.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Uber Mobile Clone"
+title: "Uber Clone"
 description: "A mobile application clone of Uber, built with TypeScript, React Native, and Expo for cross-platform development. Includes Redux for state management, Tailwind CSS for styling, and Google AutoComplete API for location services."
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
