Refactor project metadata: Update project page layout and styling

--- a/content/projects/postman-clone.mdx
+++ b/content/projects/postman-clone.mdx
@@ -6,7 +6,7 @@ url: https://kingsman.muum.dev
 published: true
 opensource: true
 categories:
-  - Dashboard
+  - Tool
   - Web
 techStack:
   - TypeScript
