Refactor project metadata: Add E-Commerce category to project page

--- a/content/projects/ai-powered-3d-store.mdx
+++ b/content/projects/ai-powered-3d-store.mdx
@@ -1,5 +1,5 @@
 ---
-title: AI 3D T-Shirt Store
+title: AI-Powered 3D Store
 description: A 3D, AI, and E-Commerce project that features a 3D shop website powered by AI, built with React, TypeScript, Three.js, and OpenAI.
 # date: "2022-01-08"
 # url: https://console.upstash.com/ratelimit
