--- a/content/projects/ai-content-builder.mdx
+++ b/content/projects/ai-content-builder.mdx
@@ -1,5 +1,5 @@
 ---
-title: "SaaS AI Platform"
+title: "AI Content Builder"
 description: A Web, AI, and SaaS project for building an AI platform, developed with TypeScript, React, Next.js, Node.js, PostgreSQL, PrismaDB, Tailwind CSS, and Stripe.
 # date: 2024-08-13
 # url: https://console.upstash.com/ratelimit
