--- a/content/projects/admin-dashboard.mdx
+++ b/content/projects/admin-dashboard.mdx
@@ -1,9 +1,8 @@
 ---
 title: "Admin Dashboard"
 description: A Web and Dashboard project featuring an Admin Dashboard built with React, TypeScript, Node, Express, and MongoDB.
-# date: 2024-08-13
-# url: https://console.upstash.com/ratelimit
-repository: alimuratumutlu/admin-dashboard
+date: 2024-10-31
+url: https://dashboard.muum.dev
 published: true
 opensource: true
 categories:
